--- a/client/src/App.css
+++ b/client/src/App.css
@@ -7,3 +7,8 @@
     justify-content: center;
     align-items:center;
 }
+
+.bg{
+    background-size: cover;
+    background-image: -moz-repeating-radial-gradient();
+}
