--- a/client/src/components/Home/home.css
+++ b/client/src/components/Home/home.css
@@ -5,13 +5,17 @@
 
 .cardcontainer{
     display: flex;
+    color: rgb(127, 255, 238);
+    background-color:rgb(43, 168, 226);
 }
 
 .card {
+    background-color:rgb(255, 123, 0);
+    color:goldenrod;
     margin-top: 20px;
     display: flex;
     flex-direction: column;
-    box-shadow: 0px 10px 20px #bdb7b7;
+    box-shadow: 0px 10px 20px #bdb8;
     width: 35%;
     height: 300px;
     border-radius: 10px;
@@ -26,11 +30,13 @@
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
+    background-color: royalblue;
 }
 
 .card__content {
     /* Take available height */
     flex: 1;
+    background-color:floralwhite;
 
 }
 
@@ -47,3 +53,4 @@
     background-size: contain;
     background-repeat: no-repeat;
 }
+
