--- a/client/src/components/Medicines/Medicines.css
+++ b/client/src/components/Medicines/Medicines.css
@@ -1,3 +1,10 @@
 .username{
     font-size: 60px;
+    color: aqua;
+}
+.user-testimonial{
+    background-color: whitesmoke;
+}
+.username1{
+    background-color: silver;
 }
